fixed error handling + add route getBairros
