# backend/src/application/controllers/controller.js
@@ -1,7 +1,7 @@
 import { respostaErroPadrao } from "../../helpers/responses.js";
 import bairroService from "../services/BairroService.js";
 import integrationService from "../services/IntegrationService.js";
-import {compararBairrosUseCase, distanciaEntrePontosUseCase} from "../usecases/useCases.js";
+import { compararBairrosUseCase, distanciaEntrePontosUseCase } from "../usecases/useCases.js";
 
 
 export default function controller() {
@@ -9,53 +9,39 @@ export default function controller() {
     const integrationServ = integrationService();
 
     return {
-        
+
+        async getBairros() {
+            const result = await bairroServ.getBairros()
+
+            return result;
+        },
+
         async getBairroById(id) {
-            try {
-                const result = await bairroServ.getBairroById(id)
+            const result = await bairroServ.getBairroById(id)
 
-                return result;
-            } catch(error) {
-                return respostaErroPadrao(error.statusCode, error.message)
-            }
+            return result;
         },
 
-        async getInfobyCEP(cep){
-            try {
-                const result = await bairroServ.getBairroByCEP(cep)
-                
-                return result;
-            } catch (error) {
-                return respostaErroPadrao(error.statusCode, error.message)
-            }
+        async getInfobyCEP(cep) {
+            const result = await bairroServ.getBairroByCEP(cep)
 
+            return result;
         },
 
-        async getLatLongbyCEPeNumero(numero, cep){
-            try {
-                const result = await integrationServ.getlatLongByNumeroECEP(numero, cep)
-                
-                return result;
-            } catch (error) {
-                return respostaErroPadrao(error.statusCode, error.message)
-            }
+        async getLatLongbyCEPeNumero(numero, cep) {
+            const result = await integrationServ.getlatLongByNumeroECEP(numero, cep)
+
+            return result;
+
 
         },
 
-        async getDistancia(origem, destino){
-            try {                
-                return await distanciaEntrePontosUseCase(origem, destino);
-            } catch (error) {
-                return respostaErroPadrao(error.statusCode, error.message)
-            }
+        async getDistancia(origem, destino) {
+            return await distanciaEntrePontosUseCase(origem, destino);
         },
 
-        async comparar(origem, destino, localInteresse){
-            try {                
-                return await compararBairrosUseCase(origem, destino, localInteresse);
-            } catch (error) {
-                return respostaErroPadrao(error.statusCode, error.message)
-            }
+        async comparar(origem, destino, localInteresse) {
+            return await compararBairrosUseCase(origem, destino, localInteresse);
         }
     }
 }
